fix overlap problems

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -45,6 +45,7 @@ a {
 
 .home-text {
   text-align: center;
+  max-width: 80vw;
 }
 
 .mask {
@@ -64,7 +65,7 @@ a {
 @import "./partials/slider.scss";
 
 @media (max-width: 1370px) {
-  home-text {
+  .home-text {
     font-size: 16px;
   }
 }
