--- a/styles/partials/_expression.scss
+++ b/styles/partials/_expression.scss
@@ -9,7 +9,7 @@
 }
 
 .expression-title {
-  margin-top: 5%;
+  margin-top: 75px;
   display: flex;
   justify-content: center;
   text-transform: uppercase;
